List ecoles added + CSV

--- a/frontend/src/app/main/pages/ecole/ecole-list/ecole.component.html
+++ b/frontend/src/app/main/pages/ecole/ecole-list/ecole.component.html
@@ -49,14 +49,14 @@
                                         [class.datatable-icon-down]="expanded"
                                         title="Expand/Collapse Row"
                                         (click)="rowDetailsToggleExpand(row)"
-                                >🍆
+                                >⬍
                                 </a>
                             </ng-template>
                         </ngx-datatable-column>
-                        <ngx-datatable-column name="Nom_    🍆" prop="nom" [width]="250"></ngx-datatable-column>
-                        <ngx-datatable-column name="Email    🍆" prop="email" [width]="250"></ngx-datatable-column>
-                        <ngx-datatable-column name="Num Tel   🍆" prop="numTel" [width]="120"></ngx-datatable-column>
-                        <ngx-datatable-column name="Code Fiscal   🍆" prop="codeFiscal"
+                        <ngx-datatable-column name="Name    ⬍" prop="nom" [width]="250"></ngx-datatable-column>
+                        <ngx-datatable-column name="Email    ⬍" prop="email" [width]="250"></ngx-datatable-column>
+                        <ngx-datatable-column name="Num Tel   ⬍" prop="numTel" [width]="120"></ngx-datatable-column>
+                        <ngx-datatable-column name="Code Fiscal   ⬍" prop="codeFiscal"
                                               [width]="120"></ngx-datatable-column>
                         <ngx-datatable-column name="Actions" [width]="120" [sortable]="false">
 
