--- a/frontend/src/app/main/pages/ecole/ecole-list/ecole.component.html
+++ b/frontend/src/app/main/pages/ecole/ecole-list/ecole.component.html
@@ -53,6 +53,13 @@
                                 </a>
                             </ng-template>
                         </ngx-datatable-column>
+                        <img
+                                class="rounded-circle mr-1"
+                                src="assets/images/portrait/small/"
+                                height="32"
+                                width="32"
+                                alt="datatable-avatar"
+                        />
                         <ngx-datatable-column name="Name    ⬍" prop="nom" [width]="250"></ngx-datatable-column>
                         <ngx-datatable-column name="Email    ⬍" prop="email" [width]="250"></ngx-datatable-column>
                         <ngx-datatable-column name="Num Tel   ⬍" prop="numTel" [width]="120"></ngx-datatable-column>
