--- a/frontend/src/app/main/pages/ecole/ecole-list/ecole.component.html
+++ b/frontend/src/app/main/pages/ecole/ecole-list/ecole.component.html
@@ -11,6 +11,10 @@
                     <a csvLink [data]="exportCSVData" class="btn btn-outline-secondary float-right mr-1" rippleEffect
                     >Export CSV</a
                     >
+                    <button type="submit"
+                            class="btn btn-primary float-right mr-1" (click)="newSchool()">
+
+                        Ajouter</button>
 
 
             <div class="card-body">
@@ -78,7 +82,6 @@
                                            aria-haspopup="true"
                                            aria-expanded="false"
                                         >
-
                                             <i data-feather="more-vertical"
                                                class="text-primary cursor-pointer mr-50"></i>
                                         </a>
