--- a/frontend/src/app/main/pages/invoice/invoice.component.html
+++ b/frontend/src/app/main/pages/invoice/invoice.component.html
@@ -239,7 +239,7 @@
                                     class="btn btn-success btn-block"
                                     data-toggle="modal"
                                     data-target="#add-payment-sidebar"
-                                    (click)="toggleSidebar('add-payment-sidebar')"
+                                    (click)="CreateInvoicePaymentRequest()"
                                     rippleEffect
                             >
                                 Add Payment
