--- a/frontend/src/app/main/pages/ecole/ecole-list/ecole.component.html
+++ b/frontend/src/app/main/pages/ecole/ecole-list/ecole.component.html
@@ -2,6 +2,48 @@
 
 <div class="content-wrapper container-xxl p-0">
     <div class="content-body">
+
+        <div class="card">
+            <h5 class="card-header">Chercher</h5>
+            <div class="card-body">
+                <div class="users-list-filter">
+                    <form>
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <fieldset class="form-group">
+                                    <select class="form-control" id="users-list-role">
+                                        <option value="">Tous</option>
+                                        <option value="user">User</option>
+                                        <option value="staff">Staff</option>
+                                    </select>
+                                </fieldset>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <fieldset class="form-group">
+                                    <select class="form-control" id="users-list-status">
+                                        <option value="">Tous</option>
+                                        <option value="Active">Active</option>
+                                        <option value="Blocked">Bloqué</option>
+                                        <option value="deactivated">Désactivé</option>
+                                    </select>
+                                </fieldset>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <fieldset class="form-group">
+                                    <select class="form-control" id="users-list-verified">
+                                        <option value="">Tous</option>
+                                        <option value="true">Oui</option>
+                                        <option value="false">Non</option>
+                                    </select>
+                                </fieldset>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <!-- users filter end -->
+
         <div class="card">
             <div class="card-header">
                 <h4 class="card-title">List of Schools</h4>
@@ -14,110 +56,119 @@
                     <button type="submit"
                             class="btn btn-primary float-right mr-1" (click)="newSchool()">
 
-                        Ajouter</button>
+                        Ajouter
+                    </button>
 
 
-            <div class="card-body">
-                <div class="w-100">
-                    <ngx-datatable
-                        #tableRowDetails
-                        class="bootstrap core-bootstrap"
-                        columnMode="force"
-                        [headerHeight]="40"
-                        [footerHeight]="50"
-                        [rowHeight]="58"
-                        [limit]="10"
-                        [rows]="rows"
-                        [scrollbarH]="true"
-                    >
-                        <!-- Row Detail Template -->
-                        <ngx-datatable-row-detail [rowHeight]="50">
+                    <div class="card-body">
+                        <div class="w-100">
+                            <ngx-datatable
+                                #tableRowDetails
+                                class="bootstrap core-bootstrap"
+                                columnMode="force"
+                                [headerHeight]="40"
+                                [footerHeight]="50"
+                                [rowHeight]="58"
+                                [limit]="10"
+                                [rows]="rows"
+                                [scrollbarH]="true"
+                            >
+                                <!-- Row Detail Template -->
+                                <ngx-datatable-row-detail [rowHeight]="50">
 
-                            <ng-template let-row="row" let-expanded="expanded" ngx-datatable-row-detail-template>
-                                <strong>Address : </strong> <span>{{ joinAddressBlocks(row.adresse) }}</span>
-                            </ng-template>
-                        </ngx-datatable-row-detail>
+                                    <ng-template let-row="row" let-expanded="expanded"
+                                                 ngx-datatable-row-detail-template>
+                                        <strong>Address : </strong> <span>{{ joinAddressBlocks(row.adresse) }}</span>
+                                    </ng-template>
+                                </ngx-datatable-row-detail>
 
 
-                        <ngx-datatable-column
-                                [width]="50"
-                                [resizeable]="false"
-                                [sortable]="false"
-                                [draggable]="false"
-                                [canAutoResize]="false"
-                        >
-                            <ng-template let-row="row" let-expanded="expanded"  ngx-datatable-cell-template>
-                                <a
-                                        href="javascript:void(0)"
-                                        [class.datatable-icon-right]="!expanded"
-                                        [class.datatable-icon-down]="expanded"
-                                        title="Expand/Collapse Row"
-                                        (click)="rowDetailsToggleExpand(row)"
-                                >⬍
-                                </a>
-                            </ng-template>
-                        </ngx-datatable-column>
-                        <img
-                                class="rounded-circle mr-1"
-                                src="assets/images/portrait/small/"
-                                height="32"
-                                width="32"
-                                alt="datatable-avatar"
-                        />
-                        <ngx-datatable-column name="Name    ⬍" prop="nom" [width]="250"></ngx-datatable-column>
-                        <ngx-datatable-column name="Email    ⬍" prop="email" [width]="250"></ngx-datatable-column>
-                        <ngx-datatable-column name="Num Tel   ⬍" prop="numTel" [width]="120"></ngx-datatable-column>
-                        <ngx-datatable-column name="Code Fiscal   ⬍" prop="codeFiscal"
-                                              [width]="120"></ngx-datatable-column>
-                        <ngx-datatable-column name="Actions" [width]="120" [sortable]="false">
-
-                            <ng-template ngx-datatable-cell-template>
-                                <div class="d-flex align-items-center">
-                                    <div ngbDropdown container="body">
-                                        <a ngbDropdownToggle
-                                           href="javascript:void(0);"
-                                           class="hide-arrow"
-                                           id="dropdownBrowserState"
-                                           data-toggle="dropdown"
-                                           aria-haspopup="true"
-                                           aria-expanded="false"
-                                        >
-                                            <i data-feather="more-vertical"
-                                               class="text-primary cursor-pointer mr-50"></i>
+                                <ngx-datatable-column
+                                        [width]="50"
+                                        [resizeable]="false"
+                                        [sortable]="false"
+                                        [draggable]="false"
+                                        [canAutoResize]="false"
+                                >
+                                    <ng-template let-row="row" let-expanded="expanded" ngx-datatable-cell-template>
+                                        <a
+                                                href="javascript:void(0)"
+                                                [class.datatable-icon-right]="!expanded"
+                                                [class.datatable-icon-down]="expanded"
+                                                title="Expand/Collapse Row"
+                                                (click)="rowDetailsToggleExpand(row)"
+                                        >⬍
                                         </a>
-                                        <div ngbDropdownMenu class="dropdown-menu-right"
-                                             aria-labelledby="dropdownBrowserState">
-                                            <a href="javascript:void(0)" ngbDropdownItem
-                                               class="d-flex align-items-center"
-                                            ><i data-feather="file-text" class="mr-50"></i> Details</a
+                                    </ng-template>
+                                </ngx-datatable-column>
+                                <img
+                                        class="rounded-circle mr-1"
+                                        src="assets/images/portrait/small/"
+                                        height="32"
+                                        width="32"
+                                        alt="datatable-avatar"
+                                />
+
+                                <ngx-datatable-column name="Name    ⬍" prop="nom" [width]="250"></ngx-datatable-column>
+                                <ngx-datatable-column  name="Email    ⬍" prop="email"
+                                                      [width]="250"></ngx-datatable-column>
+                                <ngx-datatable-column name="Num Tel   ⬍" prop="numTel"
+                                                      [width]="120"></ngx-datatable-column>
+                                <ngx-datatable-column name="Status   ⬍" prop="codeFiscal"
+                                                      [width]="120">
+                                    <ng-template let-status="value" ngx-datatable-cell-template>
+                                        <div
+                                                class="badge badge-pill"
+                                                [ngClass]="{
+                  'badge-light-success': status == 'active',
+                  'badge-light-secondary': status == 'inactive',
+                  'badge-light-warning': status == 'pending'
+                }"
+                                        >
+                                            {{ status }}
+                                        </div>
+                                    </ng-template>
+
+
+                                </ngx-datatable-column>
+                                <ngx-datatable-column name="Actions" [width]="120" [sortable]="false">
+
+                                    <ng-template ngx-datatable-cell-template let-row="row">
+                                        <div class="d-flex align-items-center">
+                                            <a routerLink="/ecoles/newecole/{{ row.id }}" ngbDropdownItem
+                                            > <i data-feather="edit" class="text-primary cursor-pointer"></i>
+                                                Edit</a
                                             >
-                                            <a href="javascript:void(0)" ngbDropdownItem
-                                               class="d-flex align-items-center"
-                                            ><i data-feather="archive" class="mr-50"></i> Archive</a
-                                            >
-                                            <a href="javascript:void(0)" ngbDropdownItem
-                                               class="d-flex align-items-center"
-                                            ><i data-feather="trash-2" class="mr-50"></i> Delete</a
+                                            <a
+                                                    [swal]="{
+                                                        icon: 'success',
+                text: 'cette action va supprimer ce client ',
+                title: 'confirmer ?',
+                showCancelButton: true,
+                confirmButtonText: 'oui',
+                customClass: {
+                  confirmButton: 'btn btn-primary ',
+                  cancelButton: 'btn btn-primary ml-1'
+                  }
+                }"
+                                                    (click)="deleteecole(row.id)"
+                                            ><i data-feather="trash" class="text-primary cursor-pointer"></i> Supprimer</a
                                             >
                                         </div>
-                                    </div>
-
-                                    <i data-feather="edit" class="text-primary cursor-pointer"></i>
-                                </div>
 
 
-                            </ng-template>
+                                    </ng-template>
 
 
-                        </ngx-datatable-column>
+                                </ngx-datatable-column>
 
 
-                    </ngx-datatable>
+                            </ngx-datatable>
 
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
 
-<!-- ngx-datatable-row-details -->
+        <!-- ngx-datatable-row-details -->
