--- a/frontend/src/app/main/pages/payment-session/payment-session.component.html
+++ b/frontend/src/app/main/pages/payment-session/payment-session.component.html
@@ -1,1 +1,38 @@
-<p>payment-session works!</p>
+<!-- Table head options -->
+<div class="row" id="table-head">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-header"><h4 class="card-title">Table head options</h4></div>
+            <div class="card-body">
+                <p class="card-text">
+                    Similar to tables and dark tables, use the modifier classes
+                    <code class="highlighter-rouge">.thead-dark</code> to make
+                    <code class="highlighter-rouge">&lt;thead&gt;</code> s appear dark.
+                </p>
+            </div>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead class="thead-dark">
+                    <tr>
+                        <th>Chekout Session-ID</th>
+                        <th>Date</th>
+                        <th>Paid</th>
+                        <th>Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody >
+
+                    </tbody>
+                </table>
+            </div>
+            <div class="card-body mt-2">
+                <p class="card-text">
+                    Use the modifier class <code class="highlighter-rouge">.thead-light</code> to make
+                    <code class="highlighter-rouge">&lt;thead&gt;</code> s appear light.
+                </p>
+            </div>
+
+        </div>
+    </div>
+</div>
+<!-- Table head options -->
