--- a/frontend/src/app/main/pages/classe/classe-list/classe-list/classe-list.component.html
+++ b/frontend/src/app/main/pages/classe/classe-list/classe-list/classe-list.component.html
@@ -39,7 +39,7 @@
                                 <ngx-datatable-row-detail [rowHeight]="50">
 
                                     <ng-template let-row="row" let-expanded="expanded" ngx-datatable-row-detail-template>
-                                        <strong>Students : </strong> <span>{{ joinAddressBlocks(row.etudiants) }}</span>
+                                        <strong>Students : </strong> <span>{{ countStudents(row.id) }}</span>
                                     </ng-template>
                                 </ngx-datatable-row-detail>
 
