--- a/frontend/src/app/main/pages/detail-etudiant/detail-etudiant.component.html
+++ b/frontend/src/app/main/pages/detail-etudiant/detail-etudiant.component.html
@@ -3,13 +3,13 @@
     <div class="col mb-3">
 
 
-    <button (click)="fileInput.click()" style="background-color: transparent; border: none;">
+
 
         <img [src]="etudiantDto.photo ? etudiantDto.photo : 'assets/images/etudiant.png'"  width="100px" height="100px">
 
 
         <input hidden type="file" #fileInput (change)="(fileInput.files)">
-    </button>
+
     </div>
 
   <!--  Details article-->
@@ -66,31 +66,65 @@
       </div>
     </div>
   </div>
-  <!--  boutons action-->
-  <div class="col-md-2 mb-1 mt-1 ">
-    <div class="row">
-      <div class="col-md-4">
+
+
+    <!--  boutons action-->
+
+    <div class="col-md-2 mb-1 mt-1 ">
+        <div class="row">
+            <div class="col-md-4">
+    <div class="col-md-2">
+
+        <div class="d-flex align-items-center">
+            <div ngbDropdown container="body">
+                <a ngbDropdownToggle
+                   href="javascript:void(0);"
+                   class="hide-arrow"
+                   id="dropdownBrowserState"
+                   data-toggle="dropdown"
+                   aria-haspopup="true"
+                   aria-expanded="false"
+                >
+
+                    <i data-feather="more-vertical"
+                       class="text-primary cursor-pointer mr-50"></i>
+                </a>
+                <div ngbDropdownMenu class="dropdown-menu-right"
+                     aria-labelledby="dropdownBrowserState">
+
+
+                    <a
+                            class="d-flex align-items-center" (click)="(etudiantDto.id)"
+                    ><i class="fa-solid fa-user"></i>Show Student</a
+                    >
+
+                    <a
+                            class="d-flex align-items-center" (click)="modifierEtudiant(etudiantDto.id)"
+                    > <i class="fas fa-pencil-alt"></i> Update Student </a
+                    >
+                    <a
+                            class="d-flex align-items-center" (click)="confirmerEtSupprimer(etudiantDto.id)"
+                    ><i class="fas fa-trash-alt"></i> Delete Student </a
+                    >
+
+                    <a
+                            class="d-flex align-items-center" (click)="confirmerEtSupprimer(etudiantDto.id)"
+                    ><i class="fa-solid fa-file-pdf"></i> Certificate of attendance </a
+                    >
 
 
 
-          <button type="button" class="btn btn-link" (click)="modifierEtudiant(etudiantDto.id)" >
-
-              <i class="fas fa-pencil-alt"></i>&nbsp;Modifier
-          </button>
 
 
-      </div>
-
-        <div class="col-md-4">
-
-
-            <button type="button" class="btn btn-link text-danger"  (click)="confirmerEtSupprimer(etudiantDto.id)"  >
-                <i class="fas fa-trash-alt"></i>&nbsp;Supprimer
-            </button>
-
-
-
-       </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
+</div>
+
+<!--  boutons action-->
+
+
+        </div>
+    </div>
 </div>
