--- a/frontend/src/app/main/pages/etudiant/etudiant-list/etudiant-list/page-etudiants.component.html
+++ b/frontend/src/app/main/pages/etudiant/etudiant-list/etudiant-list/page-etudiants.component.html
@@ -4,15 +4,15 @@
         <h1>Liste des etudiants</h1>
 
 
-          <div class="col-md-19 text-right">
 
-
-
+              <div class="d-flex justify-content-md-between">
               <a type="button" class="btn btn-primary" (click)="nvEtudiant()">
 
                   <i class="fas fa-plus"></i>&nbsp;
                   Nouveau
               </a>
+
+
 
 
 
@@ -47,13 +47,22 @@
 
     <div class="col m-3">
         <app-detail-etudiant *ngFor="let etud of listEtudiants | filter:searchText" [etudiantDto]="etud" (suppressionResult)="handleSuppression($event)"> </app-detail-etudiant>
+        <div class="card-footer">
+            <div class="d-flex justify-content-center">
+        <div *ngIf="listEtudiants.length == 0" class="alert alert-info" role="alert" >
+           <H1>Aucun etudiant trouvé dans cette classe </H1>
+        </div>
+            </div>
+        </div>
 
     </div>
 
 
-    <div  class="row mb-3">
-      <div class=" col-md-12 text-center">
-          <ngb-pagination [collectionSize]="50" [(page)]="pageBasicText" aria-label="Custom pagination">
+    <div class="card-footer">
+        <div class="d-flex justify-content-end">
+            <div *ngIf="listEtudiants.length != 0" >
+            <ngb-pagination [collectionSize]="50" [(page)]="pageBasicText" aria-label="Custom pagination"  >
+
               <ng-template ngbPaginationPrevious
               ><span [data-feather]="'chevron-left'" [class]="'font-weight-bolder'"></span>Prev
               </ng-template>
@@ -61,8 +70,9 @@
               >Next<span [data-feather]="'chevron-right'" [class]="'font-weight-bolder'"></span>
               </ng-template>
           </ngb-pagination>
+            </div>
 
          </div>
        </div>
 
-
+</div>
