cors + avatar + user list

--- a/frontend/src/app/layout/components/navbar/navbar.component.html
+++ b/frontend/src/app/layout/components/navbar/navbar.component.html
@@ -68,7 +68,7 @@
             ><span class="user-status">{{ this.currentUser.role }}</span>
           </div>
           <span class="avatar">
-            <app-initials-avatar [size]="2.5"></app-initials-avatar>
+            <app-initials-avatar [user]="this.currentUser" [size]="2.5"></app-initials-avatar>
             <span class="avatar-status-online"></span>
           </span>
         </ng-container>
