--- a/frontend/src/app/main/apps/user/user-list/user-list.component.html
+++ b/frontend/src/app/main/apps/user/user-list/user-list.component.html
@@ -98,33 +98,13 @@
         >
           <ngx-datatable-column name="User" prop="fullName" [width]="200">
             <ng-template let-row="row" let-name="value" ngx-datatable-cell-template>
-              <div class="d-flex align-items-center">
-                <div *ngIf="row.avatar.length > 0; else customAvatar">
-                  <img
-                    class="rounded-circle mr-1"
-                    src="{{ row.avatar }}"
-                    height="32"
-                    width="32"
-                    alt="datatable-avatar"
-                  />
-                </div>
-                <ng-template #customAvatar>
-                  <div
-                    class="avatar mr-1 ml-0"
-                    [ngClass]="{
-                      'bg-light-success': row.status == 'active',
-                      'bg-light-secondary': row.status == 'inactive',
-                      'bg-light-warning': row.status == 'pending'
-                    }"
-                  >
-                    <div class="avatar-content">{{ name | initials }}</div>
-                  </div>
-                </ng-template>
+              <div class="d-flex align-items-center" style="gap: .5rem;">
+                <app-initials-avatar [user]="row" [size]="2.5"></app-initials-avatar>
                 <div class="cell-line-height">
                   <a routerLink="/apps/user/user-view/{{ row.id }}" class="font-medium-1 d-block"
-                    ><span class="font-weight-bold">{{ name }}</span></a
+                    ><span class="font-weight-bold">{{ row.nom }} {{ row.prenom }}</span></a
                   >
-                  <span class="text-muted font-small-2"> @{{ row.username }}</span>
+                  <span class="text-muted font-small-2"> {{ row.email }}</span>
                 </div>
               </div>
             </ng-template>
@@ -136,11 +116,10 @@
                 <i
                   class="feather font-medium-3"
                   [ngClass]="{
-                    'icon-edit-2 text-info': role == 'Editor',
-                    'icon-settings text-warning': role == 'Author',
-                    'icon-database text-success': role == 'Maintainer',
-                    'icon-user text-primary': role == 'Subscriber',
-                    'icon-slack text-danger': role == 'Admin'
+                    'icon-edit-2 text-info': role == 'ROLE_ETUDIANT',
+                    'icon-settings text-warning': role == 'ROLE_ADMIN',
+                    'icon-database text-success': role == 'ROLE_PROFESSEUR',
+                    'icon-user text-primary': role == 'ROLE_PARENT'
                   }"
                 ></i>
                 {{ role }}
