--- a/frontend/src/app/main/pages/ecole/ecole-new/ecole-new.component.html
+++ b/frontend/src/app/main/pages/ecole/ecole-new/ecole-new.component.html
@@ -142,7 +142,7 @@
 
         <div class="col-sm-9 offset-sm-3">
             <button type="submit"
-                    class="btn btn-primary mr-1"
+                    class="btn btn-outline-primary round"
                     (click)="submit(newUserForm)"
                     rippleEffect
                     [swal]="{
